# screen-dreams

./: .dockerignore  .env.docker  .env.example  .env.uvx  .gitignore  DEBUG_GUIDE.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  DOCKER-K8S.md  DOCKER-QUICK-START.md  Dockerfile  Dockerfile.dev  Dockerfile.dev.podman  LICENSE.md  PODMAN-8080-DEPLOYMENT.md  PODMAN-DEPLOYMENT.md  README.md  REMOTE-DOCKER-SETUP.md  SAMPLE_SCREENPLAY.fountain  SETUP.md  SETUP_PRIVATE_REPO.md  TERRAFORM-DEPLOYMENT.md  USAGE_GUIDE.md  UVX-QUICK-START.md  benchmark_debug.py  create-backgrounds.py  debug-docker.sh  debug_examples.py  deploy-docker-simple.sh  deploy-docker.sh  deploy-k8s.sh  deploy-to-ecr.ps1  deploy-to-ecr.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  local-docker-deploy.sh  nginx-https.conf  podman-deploy-8080.sh  (+16 more)
.github/workflows/: pages.yml
app/: __init__.py  ai_assistant.py  ai_assistant.py.backup  auth.py  auth_old.py  forms.py  import_export.py  models.py  models_new.py  pdf_generator.py  routes.py  run.py  run_dev.py  run_prod.py  screenplay.py  security.py  simple_auth_working.py  terraform.tfstate
app/static/css/: enhanced-style.css  import-export.css
app/static/js/: editor.js  enhanced-ui.js  import-export.js  simple-theme.js
app/templates/: characters.html  editor.html  prompt_editor.html  scenes.html
app/templates/auth/: register.html
docker/nginx/: default-dev.conf  default.conf  nginx.conf
docker/postgres/: init.sql
docs/: CHARACTER_SYNC.md  Gemfile  README.md  _config.yml  debug.html  index.html  index.md  test-image.html
docs/_docs/: ai-assistant.md  features.md  getting-started.md  mobile.md
docs/_layouts/: docs.html
docs/assets/css/: docs.css  syntax.css
docs/assets/images/: README.md
docs/assets/js/: docs.js
docs/css/: docs.css
docs/js/: docs.js
k8s/: 00-config.yaml  01-database.yaml  02-application.yaml  03-ingress.yaml
static/css/: enhanced-style.css  import-export.css  style.css
static/js/: enhanced-ui.js  import-export.js  simple-theme.js
templates/: base.html  basic_register.html  characters.html  editor.html  index.html  isolated_register.html  login.html  minimal_test.html  prompt_editor.html  register.html  scenes.html  simple_register.html  test_form.html  test_register.html
templates/auth/: login.html  register.html
templates/security/: login_user.html  register_user.html
terraform/: .gitignore  .terraform.lock.hcl  README-POWERSHELL.md  README.md  app-deployment.tf  compute.tf  database.tf  deploy.ps1  dynamodb.tf  ecr.tf  main.tf  network.tf  outputs.tf  provider.tf  random.tf  security.tf  sqlite.tf  storage.tf  terraform.tfvars.example  user_data.sh  validate.ps1  variables.tf
terraform-ionos-example/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
