[project]
name = "awen-screenplay-editor"
version = "1.0.0"
description = "A simplified Python-based screenplay editor with Fountain format support and professional PDF output"
authors = [
    {name = "Awen Screenplay Editor", email = "noreply@awenscreenplay.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Editors",
]
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Security-Too==5.5.2",
    "Flask-Mail==0.9.1",
    "ReportLab==4.0.7",
    "SQLAlchemy==2.0.23",
    "fountain==0.1.3",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "Werkzeug==3.0.1",
    "argon2-cffi==23.1.0",
    "setuptools>=65.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/opensourcemechanic/awen-screenplay-editor"
Repository = "https://github.com/opensourcemechanic/awen-screenplay-editor"
Issues = "https://github.com/opensourcemechanic/awen-screenplay-editor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
