[project]
name = "screen-dreams"
version = "1.0.0"
description = "A simplified Python-based screenplay editor with Fountain format support, professional PDF output, and enhanced backup management"
authors = [
    {name = "Screen Dreams", email = "noreply@screendreams.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Editors",
]
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Security-Too==5.5.2",
    "Flask-Mail==0.9.1",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.0.5",
    "ReportLab==4.0.7",
    "SQLAlchemy==2.0.23",
    "fountain==0.1.3",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "Werkzeug==3.0.1",
    "argon2-cffi==23.1.0",
    "setuptools>=65.0.0",
    "redis>=4.5.0",
    "gunicorn>=20.1.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/opensourcemechanic/screen-dreams"
Repository = "https://github.com/opensourcemechanic/screen-dreams.git"
Issues = "https://github.com/opensourcemechanic/screen-dreams/issues"
Documentation = "https://github.com/opensourcemechanic/screen-dreams#readme"

[project.scripts]
screen-dreams = "app.run_dev:main"
screen-dreams-dev = "app.run_dev:main"
screen-dreams-prod = "app.run:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
exclude = [
    "app/__pycache__/**/*",
    "app/*.backup",
    "app/*.tfstate",
]

[tool.hatch.build.targets.sdist]
packages = ["app"]
exclude = [
    "app/__pycache__/**/*",
    "app/*.backup",
    "app/*.tfstate",
    "tests/**/*",
    "docs/**/*",
    "dist/**/*",
    "build/**/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
